--- a/src/Card.css
+++ b/src/Card.css
@@ -2,3 +2,9 @@
     height: 200px;
     width: 200px; 
 }
+
+#card {
+    border-radius: 50px;
+    border-color: rgb(0, 0, 0);
+    border-style: groove;
+}
