--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 @font-face {
     font-family: 'Japanese Brush';
-    src: url('JapaneseBrush.woff2') format('woff2'),
-        url('JapaneseBrush.woff') format('woff');
+    src: url('./JapaneseBrush.woff2') format('woff2'),
+        url('./JapaneseBrush.woff') format('woff');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -9,8 +9,8 @@
 
 @font-face {
     font-family: 'Yellow Rabbit - Personal Use';
-    src: url('YellowRabbit-PersonalUse.woff2') format('woff2'),
-        url('YellowRabbit-PersonalUse.woff') format('woff');
+    src: url('./YellowRabbit-PersonalUse.woff2') format('woff2'),
+        url('./YellowRabbit-PersonalUse.woff') format('woff');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
